--- a/spinkit-demo/pom.xml
+++ b/spinkit-demo/pom.xml
@@ -14,6 +14,7 @@
         <vaadin.version>24.0.0.beta4</vaadin.version>
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
         <viritin.version>2.0.0-alpha1</viritin.version>
+        <java.version>17</java.version>
 
         <maven-compiler-plugin.version>3.10.0</maven-compiler-plugin.version>
         <license-maven-plugin.version>4.1</license-maven-plugin.version>
@@ -129,8 +130,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
             <plugin>
